:bug: fix: 式番号の修正

--- a/psets_set_topology.tex
+++ b/psets_set_topology.tex
@@ -356,6 +356,7 @@ $\text{dom}(a) = \bigcup_{n \in \bm{N}}\text{dom}(f(n))$ より, $\text{dom}(a) 
     &\bigcup_{i\in I} X_i = X\\
     &i, j \in I \land i \neq j \implies X_i \cap X_j = \emptyset
 \end{align}
+\setcounter{equation}{0}
 \item 空でない集合 $A$ のある集合族 $(C_i)_{i\in I}$ が $A$ の直和分割であるとする. 任意の $A$ の元 $x$ に対し, $x \in C_i$ となる $i \in I$ がただ一つ存在することを示せ.
 \item (2)において, 関係 $R$ を $xRy \iff \exists i \in I,\ x \in C_i \land y \in C_i$ により定めると, $R$ は $A$ 上の同値関係となることを示せ.
 }{
