:construction: 問題の追加, 箇条書きの位置調整, 問題置き場の章を作成

--- a/psets.sty
+++ b/psets.sty
@@ -170,6 +170,13 @@
     \setcounter{numpb}{0}
 }
 
-\newenvironment{nmprob}{}{
+% 箇条書きのインデント調整
+\let\enum\enumerate
+\let\endenum\endenumerate
+
+
+\newenvironment{nmprob}{
+    \renewenvironment{enumerate}{\begin{enum}\setlength{\leftskip}{-8pt}}{\end{enum}}
+}{
     \newpage
 }
