--- a/psets_topology.tex
+++ b/psets_topology.tex
@@ -45,7 +45,7 @@
 $d(\bm{x}, \bm{z}) \leq d(\bm{x}, \bm{y}) + d(\bm{y}, \bm{z})$ が成り立つ.
 }
 \newpage
-前問について補足する.
+\hspace{-3zw}{\color{purple}●●\ 前問の補足\ ●●}
 
 まず, シュワルツの不等式を示す際に用いた証明は天下りすぎる. そこで, 二次関数と判別式を用いた証明が良く本で紹介されている.
 これは, $\|\bm{x}\|^2t^2 - 2(\bm{x}\ |\ \bm{y})t + \|\bm{y}\|^2 = \| t\bm{x} - \bm{y}\|^2 \geq 0$ の判別式が $D \leq 0$ であることから証明する.
