--- a/psets.tex
+++ b/psets.tex
@@ -16,6 +16,7 @@
 % 問題テンプレ箇条書きver
 \renewcommand{\labelenumi}{(\arabic{enumi})}
 \renewcommand{\labelenumii}{(\roman{enumii})}
+\renewcommand{\labelenumiii}{(\alph{enumiii})}
 \newcommand{\pbenum}[3][undefined]{
     \vspace{2mm}
     \hrule
