:memo: fix: 問題 3-2 補足の修正

--- a/psets_algebra.tex
+++ b/psets_algebra.tex
@@ -140,7 +140,7 @@ $g \in \mathcal{F}$ とから $g \subset f$ となるが, これは $g \subsetne
     \caption{前問題のイメージ}
 \end{figure}
 
-また, 全単射の存在だけでなく一意性も示したのは以下のような要素の順番の入れ替えを防ぐためである.
+また, 写像の存在だけでなく一意性も示したのは以下のような要素の順番の入れ替えを防ぐためである. 以下ではわかりやすさを優先し, 全単射の例としている. 
 \begin{figure}[htbp]
     \begin{minipage}[b]{0.45\linewidth}
     \centering
