--- a/psets_set.tex
+++ b/psets_set.tex
@@ -182,7 +182,7 @@ $x \in X$ とすると, $I_X$ が写像より, $\langle x, y\rangle \in I_X$ と
 
 \begin{nmprob}
 逆写像と二項関係.
-\pbenum{
+\pbenum[comp_inv]{
 \item 写像 $f: A\to B$ と $g: B\to C$ の合成写像 $g\circ f: A\to C$ が全単射であるとき, $g$ は全射であり, $f$ は単射であることを示せ.
 \item 写像 $f: A\to B$ が全単射のとき, $f^{-1} \circ f = I_A,\ f \circ f^{-1} = I_B$ を示せ.
 \item 写像 $f: A\to B,\ g: B\to A$ に対して, $f\circ g = I_B,\ g\circ f= I_A$ であるとき, $f, g$ はそれぞれ全単射であり,
