:memo: 問題 1-7 の追加, 解析学の章を追加

--- a/psets.tex
+++ b/psets.tex
@@ -67,8 +67,9 @@
 
 また, この問題集の解答が正しい保証はありません. 参考にする場合は気を付けてください.
 \include{psets_set} % 集合
-\include{psets_topology} % 位相
 \include{psets_algebra} % 代数学
+\include{psets_topology} % 位相
+\include{psets_analysis} % 解析学
 \include{psets_pstock} % 問題ストック
 
 \end{document}
